feat: 🌟 Add logic components, session storage and userReduce

--- a/src/scss/custom-bootstrap.scss
+++ b/src/scss/custom-bootstrap.scss
@@ -2,6 +2,8 @@ $main: #580078;
 $main-light: #8c00bb;
 $main-dark: #340044;
 
+$primary: $main;
+
 .btn {
   color: #fff !important;
   padding: 6px 8px !important;
