feat: 🌟 Implementation page Login with components and refactor code

--- a/src/scss/custom-bootstrap.scss
+++ b/src/scss/custom-bootstrap.scss
@@ -19,9 +19,11 @@ $theme-colors: (
         "dark":       $dark
 );
 
+$input-bg: $dark;
+
 $modal-content-bg: $dark;
 
-$input-bg: $dark;
+$card-bg: $dark;
 
 .btn {
   color: #fff !important;
