--- a/src/libs/bootstrap/css/bootstrap.css
+++ b/src/libs/bootstrap/css/bootstrap.css
@@ -4204,7 +4204,7 @@ textarea.form-control-lg {
   --bs-card-cap-color: ;
   --bs-card-height: ;
   --bs-card-color: ;
-  --bs-card-bg: var(--bs-body-bg);
+  --bs-card-bg: #242424;
   --bs-card-img-overlay-padding: 1rem;
   --bs-card-group-margin: 0.75rem;
   position: relative;
