--- a/src/Pages/login/Login.css
+++ b/src/Pages/login/Login.css
@@ -2,6 +2,17 @@
     margin-top: 3rem;
 }
 
+.login .row {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.login .row .col {
+    display: flex;
+    justify-content: center;
+}
+
 .login .card-header {
     text-align: center;
 }
@@ -21,5 +32,15 @@
 }
 
 .login .card-footer button {
+    width: 100%;
+}
+
+.btn-register {
+    width: 25%;
+    text-align: center;
+    padding: 1rem;
+}
+
+.btn-register button {
     width: 100%;
 }
